examples-yaml/ingress-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: test-ingress-nodeport
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
  selector:
    app: nginx-server
  type: ClusterIP
