examples-yaml/ingress-service/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: test-ingress-nodeport
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
    - host: "*" # nginx-service.127.0.0.1.xip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-service
              servicePort: 80
